--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -56,8 +56,8 @@ select {
   gap: 1.25rem;
 }
 
-.input-wrapper:has({disabled}) {
-  opacity: .5;
+.input-wrapper:has([disabled]) {
+  opacity: .5
 }
 
 input {
